tests/models/struct/unnamed/usize/pass/le.rs
use dade::model;
#[model]
struct TestModel (
   #[field(le = 2)]
    usize
);
fn main() {}
