tests/models/struct/unnamed/usize/fail/max_items.rs
use dade::model;
#[model]
struct TestModel (
   #[field(max_items = 2)]
    usize
);
fn main() {}
